# ast-tree-comparer

./: .gitignore  README.md  main.cpp  node.h  node_reader.cpp  node_reader.h  tree.cpp  tree.h  tree_comparer.cpp  tree_comparer.h  tree_compiler.cpp
.github/workflows/: cicd.yml
comparer/: CMakeLists.txt  console_logger.cpp  database.cpp  main.cpp  neo4j_database_wrapper.cpp  tree.cpp  tree_comparer.cpp  utils.cpp
comparer/headers/: console_logger.h  database.h  enums.h  idatabase_wrapper.h  neo4j_database_wrapper.h  node.h  tree.h  tree_comparer.h  tree_comparer_logger.h  utils.h
comparer/headers/factories/: console_logger_creator.h  database_logger_creator.h  logger_creator.h
comparer/headers/loggers/: console_logger.h  console_logger_creator.h  database_logger.h  database_logger_creator.h  logger_creator.h  tree_comparer_logger.h
comparer/include/: idatabase_wrapper.h  neo4j_database_wrapper.h  node.h  node_utilities.h  tree_comparer.h  utils.h
comparer/loggers/: console_logger.cpp  console_logger_creator.cpp  database_logger.cpp  database_logger_creater.cpp
comparer/src/: main.cpp  neo4j_database_wrapper.cpp  tree.cpp  tree_comparer.cpp  utils.cpp
comparer/tests/: CMakeLists.txt  integration_test.cpp  mock_database_wrapper.h  partial_tree_comparer.h  test_ast.txt  tree_comparer_test.cpp  tree_comparer_test_wrapper.h  tree_test.cpp
dump-tool/: CMakeLists.txt  main.cpp
